# laser-level-webcam

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compile.bat  imageio_test2.py  laser-level-webcam.py  linuxcnc_remote.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini  warmup.bat
builds/: Laser_Level_Webcam.zip.REMOVED.git-id
laser_level_tool/: Core.py  DataClasses.py  GUI.py  Widgets.py  Workers.py  curves.py  main.py  tooltips.py  utils.py
laser_level_tool/GUI/: analyser.py  graph.py  palette.py  parameters.py  sampler.py  sensor_feed.py  widgets.py
laser_level_tool/GUI_old/: sampler.py
laser_level_tool/utils/: curves.py  misc.py
saved_surfaces/: CND_25c_low  quarter_0p3mm  raw_aluminum_70mm_3mm_dist
src/: Core.py  DataClasses.py  Widgets.py  Workers.py  client.py  client_server.py  curves.py  cycle.py  linuxcnc_remote_driver.py  main.py  plotly.js  s_client.py  s_server.py  tooltips.py  utils.py  ws_client.py  ws_server.py
src/CNC_jobs/: common.py  probe.py  probe_and_machine.py  test_job.py
testing/: check_code.bat  check_code.py  check_coverage.py  run_all.py
tests/: curves_test.py  main_test.py  utils_test.py  widgets_test.py
