[metadata]
name = laser_level_webcam
version = 1.0.0
description = A tool for measuring height changes using a laser level and a webcam.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bhowiebkr/laser-level-webcam
author = Bryan Howard
author_email = bhowiebkr@gmail.com
license = AGPL-3.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU Affero General Public License v3

[options]
packages = find:

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    laser-level-webcam = src.main:start
