[metadata]
name = laser_level_webcam
version = 1.0.0
description = A tool for measuring height changes using a laser level and a webcam.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bhowiebkr/laser-level-webcam
author = Bryan Howard
author_email = bhowiebkr@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU Affero General Public License v3
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    PySide6>=6.3.2
    PySide6-Addons>=6.5.1.1
    PySide6-Essentials>=6.5.1.1
    matplotlib>=3.5.3
    numpy>=1.21.6
    pyqtdarktheme>=2.1.0
    qimage2ndarray>=1.10.0
    scipy>=1.7.3
python_requires = >=3.7
include_package_data = True

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    laser-level-webcam = src.main:start
